--- a/index.html
+++ b/index.html
@@ -1,31 +1,26 @@
 <!DOCTYPE html><html><head><title>cod: An unassuming documentation format </title><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="chrome=1"><meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"><!--if lt IE 9script(src='//html5shiv.googlecode.com/svn/trunk/html5.js')
 --><link rel="stylesheet" href="style.css"></head><body><div class="bg"></div><div class="main"><header><h1>Cod</h1><h2 class="rule"><span>An Unassuming Doc Format</span></h2><h4><em>(Documentus modestus)</em></h4></header><div class="content"><a href="https://github.com/namuol/cod"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a><section class="main-example"><section class="examples"><div class="example left"><pre><code class="lang-js">/**
-@Example
-  Text can go anywhere.
+@SomeModule
+  Text about @SomeModule
 
-  @flag
-  @number 42
-  @string Hello, cod
-  @nested
-    Nested text.
-    @property yay
-  @list A
-  @list B
-  @list C
+  @use_any_tag_you_want
+  @property
+    Text about @property
+    @sub_property 42
+  @list a
+  @list b
+  @list c
 */
 </code></pre>
 </div><div class="example right"><pre><code class="lang-json">{
-  &quot;Example&quot;: {
-    &quot;!text&quot;: &quot;Text can go anywhere.\n&quot;,
-
-    &quot;flag&quot;: true,
-    &quot;number&quot;: 42,
-    &quot;string&quot;: &quot;Hello, cod&quot;,
-    &quot;nested&quot;: {
-      &quot;!text&quot;: &quot;Nested text.&quot;,
-      &quot;property&quot;: &quot;yay&quot;
+  &quot;SomeModule&quot;: {
+    &quot;!text&quot;: &quot;Text about @SomeModule\n&quot;,
+    &quot;use_any_tag_you_want&quot;: true,
+    &quot;property&quot;: {
+      &quot;!text&quot;: &quot;Text about @property&quot;,
+      &quot;sub_property&quot;: 42
     },
-    &quot;list&quot;: [&quot;A&quot;, &quot;B&quot;, &quot;C&quot;]
+    &quot;list&quot;: [ &quot;a&quot;, &quot;b&quot;, &quot;c&quot; ]
   }
 }
 </code></pre>
